logs/dag_id=Weather_DAG_V4.4/run_id=scheduled__2024-02-12T031100+0000/task_id=data_to_db/attempt=1.log
[2024-02-12T12:50:52.718+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: Weather_DAG_V4.4.data_to_db scheduled__2024-02-12T03:11:00+00:00 [queued]>
[2024-02-12T12:50:52.854+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: Weather_DAG_V4.4.data_to_db scheduled__2024-02-12T03:11:00+00:00 [queued]>
[2024-02-12T12:50:52.862+0000] {taskinstance.py:2170} INFO - Starting attempt 1 of 1
[2024-02-12T12:50:52.995+0000] {taskinstance.py:2191} INFO - Executing <Task(PostgresOperator): data_to_db> on 2024-02-12 03:11:00+00:00
[2024-02-12T12:50:53.041+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'Weather_DAG_V4.4', 'data_to_db', 'scheduled__2024-02-12T03:11:00+00:00', '--job-id', '8777', '--raw', '--subdir', 'DAGS_FOLDER/Weather_dag.py', '--cfg-path', '/tmp/tmprjp7jsut']
[2024-02-12T12:50:53.043+0000] {standard_task_runner.py:60} INFO - Started process 13150 to run task
[2024-02-12T12:50:53.069+0000] {standard_task_runner.py:88} INFO - Job 8777: Subtask data_to_db
[2024-02-12T12:50:53.368+0000] {task_command.py:423} INFO - Running <TaskInstance: Weather_DAG_V4.4.data_to_db scheduled__2024-02-12T03:11:00+00:00 [running]> on host 06573eafe810
[2024-02-12T12:50:53.774+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='Weather_DAG_V4.4' AIRFLOW_CTX_TASK_ID='data_to_db' AIRFLOW_CTX_EXECUTION_DATE='2024-02-12T03:11:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2024-02-12T03:11:00+00:00'
[2024-02-12T12:50:53.776+0000] {sql.py:276} INFO - Executing: 
        COPY persons(first_name, last_name, dob, email)
        FROM weather.csv
        DELIMITER ','
        CSV HEADER;
[2024-02-12T12:50:53.823+0000] {base.py:83} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-02-12T12:50:53.876+0000] {base.py:83} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-02-12T12:50:53.888+0000] {sql.py:450} INFO - Running statement: 
        COPY persons(first_name, last_name, dob, email)
        FROM weather.csv
        DELIMITER ','
        CSV HEADER;, parameters: None
[2024-02-12T12:50:53.896+0000] {taskinstance.py:2698} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 398, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 455, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "weather"
LINE 3:         FROM weather.csv
                     ^

[2024-02-12T12:50:53.936+0000] {taskinstance.py:1138} INFO - Marking task as FAILED. dag_id=Weather_DAG_V4.4, task_id=data_to_db, execution_date=20240212T031100, start_date=20240212T125052, end_date=20240212T125053
[2024-02-12T12:50:54.037+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 8777 for task data_to_db (syntax error at or near "weather"
LINE 3:         FROM weather.csv
                     ^
; 13150)
[2024-02-12T12:50:54.198+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-02-12T12:50:54.271+0000] {taskinstance.py:3280} INFO - 0 downstream tasks scheduled from follow-on schedule check
